# xushi

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  turn_based_tactical_contract.md
.github/benchmarks/: baseline.json
.github/scripts/: bench_ci.py
.github/workflows/: bench.yml  ci.yml
docs/: migration_status.md  perf.md
scenarios/: asset_protection.json  benchmark_dense.json  branch_waypoint.json  default.json  distance_comms.json  dual_patrol.json  fog_of_war.json  los_blocked.json  mixed_era.json  multi_agent.json  mvp_comm_constraints.json  mvp_contract_2v2.json  mvp_reaction_ap.json  noisy_perception.json  patrol_policy.json  small_office_breach.json  task_verify.json  waypoint_patrol.json
scenarios/bench/: large.json  medium.json  small.json  xlarge.json
src/: action.h  asset_protection_mode.cpp  asset_protection_mode.h  belief.cpp  belief.h  belief_state.h  comm.cpp  comm.h  constants.h  engagement.cpp  engagement.h  game_mode.cpp  game_mode.h  grid.cpp  grid.h  invariants.h  json.cpp  json.h  main.cpp  map.cpp  map.h  movement.h  observation_state.h  office_breach_mode.cpp  office_breach_mode.h  path_resolve.cpp  path_resolve.h  patrol_policy.h  policy.h  replay.cpp  replay.h  replay_events.h  rng.h  scenario.cpp  scenario.h  sensing.cpp  sensing.h  sim.cpp  sim.h  sim_engine.cpp  (+8 more)
tests/: test_action.cpp  test_belief.cpp  test_comm.cpp  test_contract.cpp  test_determinism.cpp  test_engagement.cpp  test_game_mode.cpp  test_golden.cpp  test_grid.cpp  test_helpers.h  test_json.cpp  test_los.cpp  test_movement.cpp  test_parity.cpp  test_policy.cpp  test_replay.cpp  test_replay_path_resolution.cpp  test_rng.cpp  test_scenario.cpp  test_sensing.cpp
tools/bench/: profile.sh
viewer/: CMakeLists.txt  main.cpp  viewer.cpp  viewer.h  viewer_draw.cpp  viewer_load.cpp  viewer_update.cpp
